portfolio: Fix content not visible on <= 400px width
- also adjust logo position

--- a/frontend/src/components/main/main.css
+++ b/frontend/src/components/main/main.css
@@ -27,28 +27,28 @@
 
 .mainWrapper .reactLogo {
   position: absolute;
-  top: 110px;
+  top: 100px;
   left: 40%;
   width: 35px;
 }
 
 .mainWrapper .javascriptLogo {
   position: absolute;
-  top: 15px;
+  top: 8px;
   left: 37%;
   width: 28px;
 }
 
 .mainWrapper .githubLogo {
   position: absolute;
-  top: 5px;
+  top: 6px;
   right: 41%;
   width: 28px;
 }
 
 .mainWrapper .linuxLogo {
   position: absolute;
-  top: 90px;
+  top: 80px;
   right: 38%;
   width: 35px;
 }
